--- a/index.html
+++ b/index.html
@@ -1,17 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Сучасна пекареня</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    Privet! medved! nu
-    suka! i shasdasdaa2a2d231231232o budu ya r enter
-
-    obyasdasdaty!!!!!!!!!!weaeaw!
-</body>
-
+  <body>
+    <header>
+      <nav>
+        <a href="#">
+          <img src="./img/logo.svg" alt="Логотип сучасної пекарні" />
+        </a>
+        <ul>
+          <li><a href="#">Наші традиції</a></li>
+          <li><a href="#">Шеф-кухарі</a></li>
+          <li><a href="#">Формати</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <button type="button">Замовити дзвінок</button>
+    </header>
+    <main>
+      <!-- sam sait -->
+      <section>
+        <h1>Сучасна пекарня</h1>
+      </section>
+      <section>
+        <ul>
+          <li>Великий попит на ринку</li>
+          <li>Доступні за бюджетом формати</li>
+          <li>Досвідчена управлінська команда</li>
+        </ul>
+        <h2>Новий формат традицій</h2>
+        <p>
+          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
+          зберегла смак традиційної випічки та натуральність інгредієнтів.
+        </p>
+        <p>
+          Ми працюємо як найвідоміші мережі—
+          <span>5 хвилин і замовлення готове.</span>
+          А ще у наших пекарень стильний дизайн та висока якість обслуговування!
+        </p>
+        <img
+          src="./img/baker-man.jpg"
+          alt="чоловік пекар дивиться на батони із посмішкою"
+        />
+      </section>
+      <section>
+        <h2>Наші найкращі шеф -кухарі</h2>
+        <img src="./img/nastya.jpg" alt="Фотографія шеф-кухаря Насті" />
+        <ul>
+          <li>
+            <article>
+              <h3>Настя</h3>
+              <p>Привіт, я Настя!</p>
+              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+              <p>Я випічу для вас найсмачніщі вироби!</p>
+            </article>
+          </li>
+        </ul>
+        <img src="./img/lad.jpg" alt="Фотографія шеф-кухаря Влада" />
+        <ul>
+          <li>
+            <article>
+              <h3>Влад</h3>
+              <p>Привіт, я Влад!</p>
+              <p>
+                Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов,
+                з якою ми ділимось кожен раз з Вами через нашу випічку!
+              </p>
+              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Формати</h2>
+        <ul>
+          <li>
+            <article>
+              <h3 lang="en">Walrus</h3>
+              <p>
+                Площа: до 120 м2 Меню: розширене меню Штат: 2 продавці-касири, 2
+                пекарі, 2 помічники пекаря, 2 офіціанти-різнороби Посадкові
+                місця: є
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Horseshoe</h3>
+              <p>
+                Площа: до 25 м2 Меню: найпопулярніші позиції меню Штат: 2
+                продавці-касири, 2 пекарі, 1 помічник пекаря Посадкові місця:
+                відсутні
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Handlebar</h3>
+              <p>
+                Площа: до 15 м2 Меню: найпопулярніші позиції меню Штат: 1
+                продавець, 1 пекар, 1 помічник пекаря Посадкові місця: відсутні
+              </p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Приєднуйся до мережі пекарень</h2>
+        <p><span>Заповни форму, щоб ми звʼязались з тобою!</span></p>
+        <p>Ім’я</p>
+        <p>Телефон</p>
+        <p>Електронна пошта</p>
+        <p>Замовити дзвінок</p>
+        <p>Натискаючи на кнопку я погоджуюсь з політикою конфіденційності</p>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <a href="#">
+            <img src="./img/logo.svg" alt="Логотип сучасної пекарні" />
+          </a>
+          <li><a href="#">Наші традиції</a></li>
+          <li><a href="#">Шеф-кухарі</a></li>
+          <li><a href="#">Формати</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/X1CmE2L745aRnS6S7" target="_blank">
+              Україна, м. Київ, вул. Січових Стрільців 54
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- facebook -->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- instagram -->
+            </a>
+          </li>
+        </ul>
+        <a href="#" target="_blank">Політика конфіденційності</a>
+        <p>© 2022 Дані захищені</p>
+      </address>
+    </footer>
+  </body>
 </html>
