--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
   <body>
     <header>
       <nav>
-        <a href="#">
+        <a href="/">
           <img src="./img/logo.svg" alt="Логотип сучасної пекарні" />
         </a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#tradishions-section">Наші традиції</a></li>
+          <li><a href="#chef-section">Шеф-кухарі</a></li>
+          <li><a href="#format-section">Формати</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <button type="button">Замовити дзвінок</button>
     </header>
     <main>
-      <!-- sam sait -->
       <section>
         <h1>Сучасна пекарня</h1>
       </section>
-      <section>
+      <section id="tradishions-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -47,7 +46,7 @@
           alt="чоловік пекар дивиться на батони із посмішкою"
         />
       </section>
-      <section>
+      <section id="chef-section">
         <h2>Наші найкращі шеф -кухарі</h2>
         <img src="./img/nastya.jpg" alt="Фотографія шеф-кухаря Насті" />
         <ul>
@@ -75,7 +74,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="format-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -117,44 +116,55 @@
         <p>Електронна пошта</p>
         <p>Замовити дзвінок</p>
         <p>Натискаючи на кнопку я погоджуюсь з політикою конфіденційності</p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1934.890125672!2d30.488698375435302!3d50.456680986916666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e1!3m2!1sru!2sua!4v1732277702623!5m2!1sru!2sua"
+          width="603"
+          height="595"
+          allowfullscreen=""
+        ></iframe>
       </section>
     </main>
     <footer>
       <nav>
         <ul>
-          <a href="#">
+          <a href="/">
             <img src="./img/logo.svg" alt="Логотип сучасної пекарні" />
           </a>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#tradishions-section">Наші традиції</a></li>
+          <li><a href="#chef-section">Шеф-кухарі</a></li>
+          <li><a href="#format-section">Формати</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-          <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
-          </li>
-          <li>
-            <a href="https://maps.app.goo.gl/X1CmE2L745aRnS6S7" target="_blank">
-              Україна, м. Київ, вул. Січових Стрільців 54
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- facebook -->
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- instagram -->
-            </a>
-          </li>
-        </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <section id="contacts-section">
+          <ul>
+            <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+            <li>
+              <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            </li>
+            <li>
+              <a
+                href="https://maps.app.goo.gl/X1CmE2L745aRnS6S7"
+                target="_blank"
+              >
+                Україна, м. Київ, вул. Січових Стрільців 54
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- facebook -->
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- instagram -->
+              </a>
+            </li>
+          </ul>
+          <a href="#" target="_blank">Політика конфіденційності</a>
+          <p>&copy; 2022 Дані захищені</p>
+        </section>
       </address>
     </footer>
   </body>
